rgbds-0.6.1/test/asm/warn-truncation.err
warning: warn-truncation.asm(33) -> warn-truncation.asm::try(23): [-Wtruncation]
    Expression must be 8-bit
warning: warn-truncation.asm(33) -> warn-truncation.asm::try(24): [-Wtruncation]
    Expression must be 8-bit
warning: warn-truncation.asm(33) -> warn-truncation.asm::try(25): [-Wtruncation]
    Expression must be 16-bit
warning: warn-truncation.asm(33) -> warn-truncation.asm::try(26): [-Wtruncation]
    Expression must be 16-bit
warning: warn-truncation.asm(33) -> warn-truncation.asm::try(28): [-Wtruncation]
    Expression must be 8-bit
warning: warn-truncation.asm(33) -> warn-truncation.asm::try(29): [-Wtruncation]
    Expression must be 16-bit
warning: warn-truncation.asm(35) -> warn-truncation.asm::try(23): [-Wtruncation]
    Expression must be 8-bit
warning: warn-truncation.asm(35) -> warn-truncation.asm::try(24): [-Wtruncation]
    Expression must be 8-bit
warning: warn-truncation.asm(35) -> warn-truncation.asm::try(25): [-Wtruncation]
    Expression must be 16-bit
warning: warn-truncation.asm(35) -> warn-truncation.asm::try(26): [-Wtruncation]
    Expression must be 16-bit
warning: warn-truncation.asm(36) -> warn-truncation.asm::try(23): [-Wtruncation]
    Expression must be 8-bit
warning: warn-truncation.asm(36) -> warn-truncation.asm::try(24): [-Wtruncation]
    Expression must be 8-bit
warning: warn-truncation.asm(36) -> warn-truncation.asm::try(25): [-Wtruncation]
    Expression must be 16-bit
warning: warn-truncation.asm(36) -> warn-truncation.asm::try(26): [-Wtruncation]
    Expression must be 16-bit
warning: warn-truncation.asm(36) -> warn-truncation.asm::try(28): [-Wtruncation]
    Expression must be 8-bit
warning: warn-truncation.asm(36) -> warn-truncation.asm::try(29): [-Wtruncation]
    Expression must be 16-bit
error: warn-truncation.asm(37) -> warn-truncation.asm::try(23): [-Werror=truncation]
    Expression must be 8-bit
error: warn-truncation.asm(37) -> warn-truncation.asm::try(24): [-Werror=truncation]
    Expression must be 8-bit
error: warn-truncation.asm(37) -> warn-truncation.asm::try(25): [-Werror=truncation]
    Expression must be 16-bit
error: warn-truncation.asm(37) -> warn-truncation.asm::try(26): [-Werror=truncation]
    Expression must be 16-bit
error: warn-truncation.asm(38) -> warn-truncation.asm::try(23): [-Werror=truncation]
    Expression must be 8-bit
error: warn-truncation.asm(38) -> warn-truncation.asm::try(24): [-Werror=truncation]
    Expression must be 8-bit
error: warn-truncation.asm(38) -> warn-truncation.asm::try(25): [-Werror=truncation]
    Expression must be 16-bit
error: warn-truncation.asm(38) -> warn-truncation.asm::try(26): [-Werror=truncation]
    Expression must be 16-bit
error: warn-truncation.asm(38) -> warn-truncation.asm::try(28): [-Werror=truncation]
    Expression must be 8-bit
error: warn-truncation.asm(38) -> warn-truncation.asm::try(29): [-Werror=truncation]
    Expression must be 16-bit
